--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,13 +5,14 @@
 </head>
 <body class="text-center">
     <h1>Login</h1>
-    <form method="post" action="/login">
+    <form method="post" action="/login" th:action="@{/login}">
         <label>ユーザーID</label>
-        <input type="text" /><br/>
+        <input type="text" name="username" /><br/>
         <br />
         <label>パスワード</label>
-        <input type="password" /><br/>
+        <input type="password" name="password"/><br/>
         <br />
+        <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
         <button type="submit">ログイン</button>
     </form>
     <br />
