users can manage

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -54,6 +54,7 @@
 
     <form action="/logout" method="post">
         <input type="submit" value="Logout" />
+        <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     </form>
 </div>
 
