--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 <body class="text-center">
     <h1>Login</h1>
-    <form method="post" action="/login" th:action="@{/login}">
+    <form method="post" action="/doLogin">
         <label>ユーザーID</label>
         <input type="text" name="username" /><br/>
         <br />
