--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,8 +8,8 @@
     <body class="text-center">
         <h1>ユーザー登録画面</h1>
         <form method="post" action="/signup" th:action="@{/signup}">
-            <label>ユーザーID</label>
-            <input type="text" name="userId"/><br/>
+            <label>ユーザー名</label>
+            <input type="text" name="username"/><br/>
             <br />
             <label>パスワード</label>
             <input type="password" name="password"/><br/>
