--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -7,7 +7,7 @@
 
 <div>
 
-    <h2>Welcome, <span th:text="${username}">User</span>!</h2>
+    <h2>Welcome, <span th:text="${username}"></span>!</h2>
 
     <h3>１日の栄養摂取量</h3>
     <p><strong>Calories:</strong> 2000kcal</p>
