--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -18,7 +18,7 @@
     <form action="#" method="post">
         <label>Food:</label>
         <select name="food">
-            <option th:each="food : ${foods}" th:value="${food.foodName}" th:text="${food.foodName}"></option>
+            <option th:each="food : ${foods}" th:value="${food.getFoodName()}" th:text="${food.getFoodName()}"></option>
         </select>
         <label>Grams:</label>
         <input type="number" name="grams" placeholder="Enter weight in grams" />
