--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -9,13 +9,15 @@
 
     <h2>Welcome, <span th:text="${username}"></span>!</h2>
 
-    <h3>１日の栄養摂取量</h3>
-    <p><strong>Calories:</strong> 2000kcal</p>
-    <p><strong>Protein:</strong> 50g</p>
-    <p><strong>Carbohydrates:</strong> 250g</p>
-    <p><strong>Fats:</strong> 70g</p>
-
-    <form action="#" method="post">
+    <div th:if="${todayTotalNutrition != null}">
+        <h4>選択した食品の栄養素情報 (100g当たり)</h4>
+        <p><strong>カロリー(kcal):</strong> <span th:text="${todayTotalNutrition.energy}"></span></p>
+        <p><strong>タンパク質 (g):</strong> <span th:text="${todayTotalNutrition.protein}"></span></p>
+        <p><strong>脂質 (g):</strong> <span th:text="${todayTotalNutrition.fat}"></span></p>
+        <p><strong>コレステロール (mg):</strong> <span th:text="${todayTotalNutrition.cholesterol}"></span></p>
+        <p><strong>炭水化物 (g):</strong> <span th:text="${todayTotalNutrition.carbohydrates}"></span></p>
+    </div>
+    <form action="/dashboard" method="post">
         <label>Food:</label>
         <select name="food">
             <option th:each="food : ${foods}" th:value="${food.getFoodName()}" th:text="${food.getFoodName()}"></option>
@@ -25,32 +27,32 @@
         <label>Date:</label>
         <input type="date" name="date" />
         <input type="submit" value="Add" />
+        <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     </form>
     
 
     <table>
-        <thead>
-            <tr>
-                <th>年月日</th>
-                <th>カロリー(kcal)</th>
-                <th>タンパク質 (g)</th>
-                <th>脂質 (g)</th>
-                <th>コレステロール (mg)</th>
-                <th>炭水化物 (g)</th>
-                <th>食品</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2023-10-13</td>
-                <td>Chicken</td>
-                <td>150g</td>
-                <td>200kcal</td>
-                <td>30g</td>
-                <td>5g</td>
-                <td>10g</td>
-            </tr>
-        </tbody>
+        <tr>
+            <th>年月日</th>
+            <th>食品</th>
+            <th>グラム</th>
+            <th>カロリー(kcal)</th>
+            <th>タンパク質(g)</th>
+            <th>脂質(g)</th>
+            <th>コレステロール(mg)</th>
+            <th>炭水化物(g)</th>
+        </tr>
+        <tr th:each="nutrition : ${nutritionHistory}">
+            <td th:text="${nutrition.date}"></td>
+            <td th:text="${nutrition.foodName}"></td>
+            <td th:text="${nutrition.grams + 'g'}"></td>
+            <td th:text="${nutrition.energy + 'kcal'}"></td> 
+            <td th:text="${nutrition.protein + 'g'}"></td>
+            <td th:text="${nutrition.fat + 'g'}"></td>
+            <td th:text="${nutrition.cholesterol + 'mg'}"></td>
+            <td th:text="${nutrition.carbohydrates + 'g'}"></td>
+        </tr>
+        
     </table>
 
     <form action="/logout" method="post">
@@ -60,4 +62,5 @@
 </div>
 
 </body>
+
 </html>
