--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -9,15 +9,15 @@
 
     <h2>Welcome, <span th:text="${username}"></span>!</h2>
 
-    <div th:if="${selectedNutrition != null}">
+    <div th:if="${todayTotalNutrition != null}">
         <h4>選択した食品の栄養素情報 (100g当たり)</h4>
-        <p><strong>カロリー(kcal):</strong> <span th:text="${selectedNutrition.energy}"></span></p>
-        <p><strong>タンパク質 (g):</strong> <span th:text="${selectedNutrition.protein}"></span></p>
-        <p><strong>脂質 (g):</strong> <span th:text="${selectedNutrition.fat}"></span></p>
-        <p><strong>コレステロール (mg):</strong> <span th:text="${selectedNutrition.cholesterol}"></span></p>
-        <p><strong>炭水化物 (g):</strong> <span th:text="${selectedNutrition.carbohydrates}"></span></p>
+        <p><strong>カロリー(kcal):</strong> <span th:text="${todayTotalNutrition.energy}"></span></p>
+        <p><strong>タンパク質 (g):</strong> <span th:text="${todayTotalNutrition.protein}"></span></p>
+        <p><strong>脂質 (g):</strong> <span th:text="${todayTotalNutrition.fat}"></span></p>
+        <p><strong>コレステロール (mg):</strong> <span th:text="${todayTotalNutrition.cholesterol}"></span></p>
+        <p><strong>炭水化物 (g):</strong> <span th:text="${todayTotalNutrition.carbohydrates}"></span></p>
     </div>
-    <form action="#" method="post">
+    <form action="/dashboard" method="post">
         <label>Food:</label>
         <select name="food">
             <option th:each="food : ${foods}" th:value="${food.getFoodName()}" th:text="${food.getFoodName()}"></option>
@@ -42,16 +42,17 @@
             <th>コレステロール(mg)</th>
             <th>炭水化物(g)</th>
         </tr>
-        <tr th:each="entry : ${userNutritionHistory}">
-            <td th:text="${entry.date}"></td>
-            <td th:text="${entry.foodName}"></td>
-            <td th:text="${entry.grams + 'g'}"></td>
-            <td th:text="${entry.calories + 'kcal'}"></td>
-            <td th:text="${entry.protein + 'g'}"></td>
-            <td th:text="${entry.fat + 'g'}"></td>
-            <td th:text="${entry.cholesterol + 'mg'}"></td>
-            <td th:text="${entry.carbohydrates + 'g'}"></td>
+        <tr th:each="nutrition : ${nutritionHistory}">
+            <td th:text="${nutrition.date}"></td>
+            <td th:text="${nutrition.foodName}"></td>
+            <td th:text="${nutrition.grams + 'g'}"></td>
+            <td th:text="${nutrition.energy + 'kcal'}"></td> 
+            <td th:text="${nutrition.protein + 'g'}"></td>
+            <td th:text="${nutrition.fat + 'g'}"></td>
+            <td th:text="${nutrition.cholesterol + 'mg'}"></td>
+            <td th:text="${nutrition.carbohydrates + 'g'}"></td>
         </tr>
+        
     </table>
 
     <form action="/logout" method="post">
