--- a/src/main/resources/templates/edit-entry.html
+++ b/src/main/resources/templates/edit-entry.html
@@ -2,20 +2,43 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Entry</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+    </script>
 </head>
-<body>
+<body class="bg-gray-100 p-6">
 
-<form action="/dashboard/update-entry" method="post">
-    <input type="hidden" name="id" th:value="${entry.id}" />
-    <label>Food:</label>
-    <input type="text" name="foodName" th:value="${entry.foodName}" />
-    <label>Grams:</label>
-    <input type="number" name="grams" th:value="${entry.grams}" />
-    <label>Date:</label>
-    <input type="date" name="date" th:value="${entry.date}" />
-    <input type="submit" value="Update" />
-    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
-</form>
-
-</body>
-</html>
+    <div class="max-w-md mx-auto bg-white p-6 rounded shadow-md">
+        <form action="/dashboard/update-entry" method="post" class="space-y-4">
+            <input type="hidden" name="id" th:value="${entry.id}" />
+    
+            <div>
+                <label class="block text-left">Food:</label>
+                <input type="text" name="foodName" th:value="${entry.foodName}" class="w-full px-3 py-2 border rounded" />
+            </div>
+            <div>
+                <label class="block text-left">Grams:</label>
+                <input type="number" name="grams" th:value="${entry.grams}" class="w-full px-3 py-2 border rounded" />
+            </div>
+            <div>
+                <label class="block text-left">Date:</label>
+                <input type="date" name="date" th:value="${entry.date}" class="w-full px-3 py-2 border rounded" />
+            </div>
+            
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+            <input type="submit" value="Update" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded w-full" />
+        </form>
+    </div>
+    
+    </body>
+    </html>
