--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"></html>
-<html>
-    <head>
-        <title>signup</title>
-    </head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>signup</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <body class="text-center">
-        <h1>ユーザー登録画面</h1>
-        <form method="post" action="/signup" th:action="@{/signup}">
-            <label>ユーザー名</label>
-            <input type="text" name="username"/><br/>
-            <br />
-            <label>パスワード</label>
-            <input type="password" name="password"/><br/>
-            <br />
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+    </script>
+</head>
+<body class="bg-gray-100 p-6">
+
+<div class="max-w-sm mx-auto bg-white p-4 rounded shadow-md">
+
+    <h1 class="text-xl font-bold mb-4 text-sky-600">ユーザー登録画面</h1>
+
+    <form method="post" action="/signup" th:action="@{/signup}" class="space-y-4">
+        <div>
+            <label for="username" class="block mb-2 font-medium">ユーザー名</label>
+            <input type="text" name="username" id="username" class="w-full px-3 py-2 border rounded focus:outline-none focus:border-sky-500"/>
+        </div>
+        
+        <div>
+            <label for="password" class="block mb-2 font-medium">パスワード</label>
+            <input type="password" name="password" id="password" class="w-full px-3 py-2 border rounded focus:outline-none focus:border-sky-500"/>
+        </div>
+
+        <div>
             <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
-            <button type="submit">登録</button>
+            <button type="submit" class="w-full bg-sky-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">登録</button>
         </form>
-    </body>
+    </div>
 
+</body>
 </html>
